New: Settings moved to registry New: New filter (all opened defect)

--- a/QCIssuePlugin/TODO.txt
+++ b/QCIssuePlugin/TODO.txt
@@ -1,11 +1,17 @@
 ﻿TO DO (ordered)
+- Templated message construction, with default being ALI. Out of the box templates:
+  - ALI (default)
+  - ID only
+  - ID - Summary
+- Save the connection - do not disconnect, between check-ins. This is to have a faster check-in time in the case of multiple check-ins
 - Check QC/ALM version: must be 11 or later, with REST API support
-
 - Warn if authentication is not over https as authentication is HTTP Basic
 - If domain/project/user/pass populated: auth and get the list immediately
 - If not authenticated, don't do anything
 
 DONE
+- Fix config file which is not read when modified by the user - move to registry
+- Add target release to the list of fields retrieved
 - Create 32bits installer
 - Identify TurtleALM connections in ALM site admin by changing client-type
 - Auto update by checking http://almtools.sourceforge.net/turtlealm-latest.txt
